// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary component ErrorBoundary child component without error 1`] = `
<div
  className="sc-kpOJdX jaznfJ"
>
  <div
    className="sc-bwzfXH fSBywS"
    data-test="error-boundary"
  >
    <div
      className="sc-htpNat iVFZhG"
    >
      <span
        className="sc-bdVaJa fqBkaO"
        color={null}
        height={null}
        width={null}
      >
        <svg
          height="140"
          viewBox="0 0 140 140"
          width="140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M0 0h140v140H0z"
            />
            <g
              stroke="#27445F"
            >
              <path
                d="M15.31 21.29v98.323h108.43V21.29z"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
              <path
                d="M15.31 40.353h108.43"
                strokeWidth="8.27"
              />
            </g>
            <g
              transform="translate(67.033 67.31)"
            >
              <circle
                cx="35.08"
                cy="35.08"
                fill="#F6F9FB"
                r="35"
              />
              <ellipse
                cx="35.53"
                cy="35.633"
                rx="25.563"
                ry="25.547"
                stroke="#27445F"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
            </g>
            <g
              stroke="#27445F"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="8.27"
            >
              <path
                d="M102.5 90.5v14.214M102.5 117.5v-.439"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <h3
      className="sc-bxivhb feVdGI"
      data-test="error-boundaryTitle"
    >
      WE_ARE_SORRY_BUT_WE_WERE_UNABLE_TO_SERVICE_YOUR_REQUEST
    </h3>
    <p
      className="sc-dxgOiQ lokNQP"
    >
      THE_SERVICE_IS_TEMPORARILY_UNAVAILABLE_AND_OUR_ENGINEERS_ARE_WORKING_QUICKLY_TO_RESOLVE_THE_ISSUE
      <a
        className="sc-ckVGcZ jZaKMr"
        href="CONTACT_LINK_URL"
      >
        CONTACT_LINK_URL
      </a>
    </p>
    <div
      className="sc-kGXeez juXhZD"
    >
      <button
        className="sc-bZQynM leRwIV"
        data-test="button-not-found"
        disabled={false}
        height={null}
        onClick={[Function]}
        type="button"
        width={200}
      >
        <div
          className="sc-gzVnrw dXHRgh"
        >
          <div
            className="sc-htoDjs dAyEzA"
          >
            BACK_TO_HOME_SCREEN
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary component ErrorBoundary when has children component error 1`] = `
<div
  className="sc-kpOJdX jaznfJ"
>
  <div
    className="sc-bwzfXH fSBywS"
    data-test="error-boundary"
  >
    <div
      className="sc-htpNat iVFZhG"
    >
      <span
        className="sc-bdVaJa fqBkaO"
        color={null}
        height={null}
        width={null}
      >
        <svg
          height="140"
          viewBox="0 0 140 140"
          width="140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M0 0h140v140H0z"
            />
            <g
              stroke="#27445F"
            >
              <path
                d="M15.31 21.29v98.323h108.43V21.29z"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
              <path
                d="M15.31 40.353h108.43"
                strokeWidth="8.27"
              />
            </g>
            <g
              transform="translate(67.033 67.31)"
            >
              <circle
                cx="35.08"
                cy="35.08"
                fill="#F6F9FB"
                r="35"
              />
              <ellipse
                cx="35.53"
                cy="35.633"
                rx="25.563"
                ry="25.547"
                stroke="#27445F"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
            </g>
            <g
              stroke="#27445F"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="8.27"
            >
              <path
                d="M102.5 90.5v14.214M102.5 117.5v-.439"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <h3
      className="sc-bxivhb feVdGI"
      data-test="error-boundaryTitle"
    >
      WE_ARE_SORRY_BUT_WE_WERE_UNABLE_TO_SERVICE_YOUR_REQUEST
    </h3>
    <p
      className="sc-dxgOiQ lokNQP"
    >
      THE_SERVICE_IS_TEMPORARILY_UNAVAILABLE_AND_OUR_ENGINEERS_ARE_WORKING_QUICKLY_TO_RESOLVE_THE_ISSUE
      <a
        className="sc-ckVGcZ jZaKMr"
        href="CONTACT_LINK_URL"
      >
        CONTACT_LINK_URL
      </a>
    </p>
    <div
      className="sc-kGXeez juXhZD"
    >
      <button
        className="sc-bZQynM leRwIV"
        data-test="button-not-found"
        disabled={false}
        height={null}
        onClick={[Function]}
        type="button"
        width={200}
      >
        <div
          className="sc-gzVnrw dXHRgh"
        >
          <div
            className="sc-htoDjs dAyEzA"
          >
            BACK_TO_HOME_SCREEN
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary component ErrorBoundary when has children with Offline error 1`] = `
<div
  className="sc-kpOJdX jaznfJ"
>
  <div
    className="sc-bwzfXH fSBywS"
    data-test="error-boundary"
  >
    <div
      className="sc-htpNat iVFZhG"
    >
      <span
        className="sc-bdVaJa fqBkaO"
        color={null}
        height={null}
        width={null}
      >
        <svg
          height="141"
          viewBox="0 0 140 141"
          width="140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M0 1h140v140H0z"
            />
            <g
              fill="#E1EDF6"
              transform="translate(16 29)"
            >
              <path
                d="M104.058 25.822l.883.812 1.146 1.07a4.5 4.5 0 0 1-5.968 6.732l-.174-.154-1.145-1.069a66.248 66.248 0 0 0-10.918-8.265l6.53-6.531a75.32 75.32 0 0 1 9.646 7.405zM75.025 9.52l-7.4 7.4c-20.936-4.483-43.597 1.31-59.983 17.294a4.5 4.5 0 1 1-6.284-6.442C21.424 8.198 49.774 2.072 75.025 9.52zM88.008 46.39l.552.648a4.5 4.5 0 0 1-6.737 5.964l-.153-.174-.059-.07a36.842 36.842 0 0 0-12.09-9.45l6.657-6.656a45.846 45.846 0 0 1 11.83 9.739zm-34.04-15.813L43.715 40.83a36.831 36.831 0 0 0-14.194 7.41 36.972 36.972 0 0 0-4.57 4.58 4.5 4.5 0 0 1-6.902-5.775 45.972 45.972 0 0 1 5.682-5.694 45.793 45.793 0 0 1 30.237-10.774zM72.22 65.298l.247.307.282.356a4 4 0 0 1-6.134 5.131l-.141-.168-.282-.356c-5.067-6.408-14.207-7.699-20.827-3.104l10.66-10.66c6.116.5 12.02 3.39 16.195 8.494z"
                fillRule="nonzero"
              />
              <circle
                cx="53.5"
                cy="80"
                r="4"
              />
              <path
                d="M91.632 1.212a4 4 0 0 1 5.885 5.415l-.149.161-70 72a4 4 0 0 1-5.885-5.415l.149-.161 70-72z"
                fillRule="nonzero"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <h3
      className="sc-bxivhb feVdGI"
      data-test="error-boundaryTitle"
    >
      LOOKS_LIKE_YOU_ARE_OUT_OF_CONNECTION
    </h3>
    <p
      className="sc-EHOje JoEeO"
      data-test="error-boundarySubTitle"
    >
      CHECK_YOUR_INTERNET_AND_TRY_TO_RECONNECT
    </p>
    <p
      className="sc-dxgOiQ lokNQP"
    >
      THE_SERVICE_IS_TEMPORARILY_UNAVAILABLE_AND_OUR_ENGINEERS_ARE_WORKING_QUICKLY_TO_RESOLVE_THE_ISSUE
      <a
        className="sc-ckVGcZ jZaKMr"
        href="CONTACT_LINK_URL"
      >
        CONTACT_LINK_URL
      </a>
    </p>
    <div
      className="sc-kGXeez juXhZD"
    />
  </div>
</div>
`;

exports[`ErrorBoundary component ErrorBoundary when should show error to user from backend 1`] = `
<div
  className="sc-kpOJdX jaznfJ"
>
  <div
    className="sc-bwzfXH fSBywS"
    data-test="error-boundary"
  >
    <div
      className="sc-htpNat iVFZhG"
    >
      <span
        className="sc-bdVaJa fqBkaO"
        color={null}
        height={null}
        width={null}
      >
        <svg
          height="140"
          viewBox="0 0 140 140"
          width="140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M0 0h140v140H0z"
            />
            <g
              stroke="#27445F"
            >
              <path
                d="M15.31 21.29v98.323h108.43V21.29z"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
              <path
                d="M15.31 40.353h108.43"
                strokeWidth="8.27"
              />
            </g>
            <g
              transform="translate(67.033 67.31)"
            >
              <circle
                cx="35.08"
                cy="35.08"
                fill="#F6F9FB"
                r="35"
              />
              <ellipse
                cx="35.53"
                cy="35.633"
                rx="25.563"
                ry="25.547"
                stroke="#27445F"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
            </g>
            <g
              stroke="#27445F"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="8.27"
            >
              <path
                d="M102.5 90.5v14.214M102.5 117.5v-.439"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <h3
      className="sc-bxivhb feVdGI"
      data-test="error-boundaryTitle"
    >
      Daily limit
    </h3>
    <p
      className="sc-EHOje JoEeO"
      data-test="error-boundarySubTitle"
    >
      It was not possible to carry out the redemption.
    </p>
    <p
      className="sc-EHOje JoEeO"
      data-test="error-boundarySubTitle"
    >
       For your safety, contact your banker to carry out the transaction.
    </p>
    <p
      className="sc-dxgOiQ lokNQP"
    >
      THE_SERVICE_IS_TEMPORARILY_UNAVAILABLE_AND_OUR_ENGINEERS_ARE_WORKING_QUICKLY_TO_RESOLVE_THE_ISSUE
      <a
        className="sc-ckVGcZ jZaKMr"
        href="CONTACT_LINK_URL"
      >
        CONTACT_LINK_URL
      </a>
    </p>
    <div
      className="sc-kGXeez juXhZD"
    >
      <button
        className="sc-bZQynM leRwIV"
        data-test="button-not-found"
        disabled={false}
        height={null}
        onClick={[Function]}
        type="button"
        width={200}
      >
        <div
          className="sc-gzVnrw dXHRgh"
        >
          <div
            className="sc-htoDjs dAyEzA"
          >
            BACK_TO_HOME_SCREEN
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary component Qualified error when API returns Approvement Flow Not Found error 1`] = `
<div
  className="sc-kpOJdX jaznfJ"
>
  <div
    className="sc-bwzfXH fSBywS"
    data-test="error-boundary"
  >
    <div
      className="sc-htpNat iVFZhG"
    >
      <span
        className="sc-bdVaJa fqBkaO"
        color={null}
        height={null}
        width={null}
      >
        <svg
          height="140"
          viewBox="0 0 140 140"
          width="140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M0 0h140v140H0z"
            />
            <g
              stroke="#27445F"
            >
              <path
                d="M15.31 21.29v98.323h108.43V21.29z"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
              <path
                d="M15.31 40.353h108.43"
                strokeWidth="8.27"
              />
            </g>
            <g
              transform="translate(67.033 67.31)"
            >
              <circle
                cx="35.08"
                cy="35.08"
                fill="#F6F9FB"
                r="35"
              />
              <ellipse
                cx="35.53"
                cy="35.633"
                rx="25.563"
                ry="25.547"
                stroke="#27445F"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="8.2"
              />
            </g>
            <g
              stroke="#27445F"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="8.27"
            >
              <path
                d="M102.5 90.5v14.214M102.5 117.5v-.439"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <h3
      className="sc-bxivhb feVdGI"
      data-test="error-boundaryTitle"
    >
      WE_ARE_SORRY_BUT_WE_WERE_UNABLE_TO_SERVICE_YOUR_REQUEST
    </h3>
    <p
      className="sc-dxgOiQ lokNQP"
    >
      THE_SERVICE_IS_TEMPORARILY_UNAVAILABLE_AND_OUR_ENGINEERS_ARE_WORKING_QUICKLY_TO_RESOLVE_THE_ISSUE
      <a
        className="sc-ckVGcZ jZaKMr"
        href="CONTACT_LINK_URL"
      >
        CONTACT_LINK_URL
      </a>
    </p>
    <div
      className="sc-kGXeez juXhZD"
    >
      <button
        className="sc-bZQynM leRwIV"
        data-test="button-not-found"
        disabled={false}
        height={null}
        onClick={[Function]}
        type="button"
        width={200}
      >
        <div
          className="sc-gzVnrw dXHRgh"
        >
          <div
            className="sc-htoDjs dAyEzA"
          >
            BACK_TO_HOME_SCREEN
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
